# cam_opencv

./: AAAAAAAAAAAHHHHHHHHHHHH.txt  CMakeLists.txt  README.md
include/: cam.h  cvmat2qimage.h  filter.h  image_manipulation_model.h  image_process.h  local_binary_pattern.h  manipulation.h  manipulation_parameter.h  qt_cam_opencv_controller.h  qt_display_parameters_window.h  qt_image_view.h
src/: cam.cpp  cam.sublime-workspace  cvmat2qimage.cpp  filter.cpp  image_manipulation_model.cpp  local_binary_pattern.cpp  main.cpp  main_mvc.cpp  manipulation.cpp  qt_cam_opencv_controller.cpp  qt_display_parameters_window.cpp  qt_image_view.cpp
